--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,16 @@ certifi==2022.12.7
 charset-normalizer==2.1.1
 exceptiongroup==1.1.0
 googlemaps==4.7.3
+httplib2==0.21.0
 idna==3.4
 iniconfig==1.1.1
+oauth2==1.9.0.post1
 packaging==22.0
 pluggy==1.0.0
+pyparsing==3.0.9
 pytest==7.2.0
 requests==2.28.1
+six==1.16.0
 tomli==2.0.1
 urllib3==1.26.13
+yelpapi==2.5.0
