--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,21 @@
 attrs==22.2.0
 certifi==2022.12.7
 charset-normalizer==2.1.1
+click==8.1.3
+cloudevents==1.8.0
+deprecation==2.1.0
 exceptiongroup==1.1.0
+Flask==2.2.2
+functions-framework==3.3.0
 googlemaps==4.7.3
+gunicorn==20.1.0
 httplib2==0.21.0
 idna==3.4
+importlib-metadata==6.0.0
 iniconfig==1.1.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
 oauth2==1.9.0.post1
 packaging==22.0
 pluggy==1.0.0
@@ -15,4 +25,7 @@ requests==2.28.1
 six==1.16.0
 tomli==2.0.1
 urllib3==1.26.13
+watchdog==2.2.1
+Werkzeug==2.2.2
 yelpapi==2.5.0
+zipp==3.11.0
